<resources>
    <string name="app_name">Building Maintenance</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edit_user_name">User Name</string>
    <string name="edit_password">Password</string>
    <string name="button_login">Login</string>
    <string name="title_activity_add_building_manager">AddBuildingManager</string>
    <string name="text_manager_name">Name</string>
    <string name="button_getting_started">Getting Started</string>
    <string name="title_activity_display_menu">DisplayMenu</string>
    <string name="button_buildings">Buildings</string>
    <string name="button_managers">Managers</string>
    <string name="button_exit">Exit</string>
    <string name="title_activity_register">Register</string>
    <string name="edit_first_name">First Name</string>
    <string name="edit_last_name">Last Name</string>
    <string name="edit_email">Email</string>
    <string name="edit_confirm_password">Confirm Password</string>
    <string name="button_register">Register</string>
    <string name="button_cancel_register">Cancel</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="dialog_message">Thank you for registering go to login screen?</string>
    <string name="text_validate">Please Fill in all Fields*</string>
</resources>
