<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1"
        tools:context="com.nkosi.buildingmanteinancefront.views.AddBuildingManager">


        <ImageView android:src="@drawable/add_manager"
            android:layout_width="893dp"
            android:layout_height="134dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.47" />

        <TextView
            android:id="@+id/text_add_manager_validate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:visibility="visible"
            android:text="@string/text_validate"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:text="@string/text_manager_name"/>

        <EditText android:id="@+id/edit_manager_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"/>

        <Button android:id="@+id/btnAddManager"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/button_login"
            android:onClick="addManager"/>

</LinearLayout>
</ScrollView>