<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:weightSum="1">

        <ImageView android:src="@drawable/logo"
            android:layout_width="893dp"
            android:layout_height="134dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.47" />

        <TextView
            android:id="@+id/text_login_validate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="#FF0000"
            android:visibility="visible"
            android:text="@string/text_validate"/>

        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24"
            android:text="@string/edit_user_name"/>

        <EditText android:id="@+id/edit_login_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="20dip"
            android:singleLine="true"/>

        <!--  Password Label -->
        <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#372c24" />

        <EditText android:id="@+id/edit_login_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:singleLine="true"
            android:password="true"
            android:text=""/>

        <Button android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/button_login"
            android:onClick="logIn"/>

        <!-- Link to Registration Screen -->
        <TextView android:id="@+id/link_to_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:layout_marginBottom="40dip"
            android:text="New to Building Manager? Register here"
            android:gravity="center"
            android:textSize="20dip"
            android:textColor="#0b84aa"/>
    </LinearLayout>
</ScrollView>